[package]
name = "ixy-net"
version = "0.1.0"
authors = ["HeroicKatora <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
ethox = { path = "ethox/ethox", features = ["std"] }
ixy = { path = "ixy.rs" }

[dev-dependencies]
ethox-iperf = { path = "ethox/ethox-iperf3" }
env_logger = "0.6"
structopt = "0.2"
